--- a/src/app/components/ui/navbar/Navbar.module.scss
+++ b/src/app/components/ui/navbar/Navbar.module.scss
@@ -3,6 +3,12 @@
     &_wrap{
         @apply flex items-center justify-between mx-auto max-w-2xl px-4 py-5 sm:px-6 lg:max-w-7xl;
     }
+    &_nav{
+        @apply hidden gap-12 lg:flex 2xl:ml-16;
+        &_item{
+            @apply text-base font-medium transition duration-100 hover:text-violet-600;
+        }
+    }
 }
 .logo{
     @apply text-3xl font-bold text-violet-600;
