--- a/src/app/components/ui/hero/Hero.module.scss
+++ b/src/app/components/ui/hero/Hero.module.scss
@@ -1,5 +1,15 @@
 .hero{
     @apply mx-auto max-w-2xl px-4 sm:pb-6 lg:max-w-7xl;
+    &_left{
+        @apply mb-6 flex w-full flex-col justify-center sm:mb-12 lg:mb-0 lg:w-1/3 lg:pb-24 lg:pt-40;
+        
+    }
+    &_left_title{
+        @apply mb-4 text-4xl font-bold text-balance sm:text-5xl md:mb-8
+    }
+    &_left_txt{
+        @apply max-w-md leading-relaxed text-gray-500 xl:text-lg;
+    }
 }
 .wrap{
     @apply mb-8 flex flex-wrap justify-between md:mb-16;
